# agricultural-leaf-vision

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  test_payload.json
backend/: Dockerfile  main.py  server.py
client/: .firebaserc  package-lock.json
client/.firebase/: hosting.YnVpbGQ.cache  hosting.ZGlzdA.cache
client/src/: App.tsx  index.css
client/src/components/: ModelPerformance.tsx  PredictionResult.tsx  ProjectInformation.tsx  UploadArea.tsx
data/: loadDataset.py
data_scripts/: download_mapping.py  model_builder.py  plot_training_history.py  rebuild_serving_model.py  split_dataset.py
deploy/: deploy_model.py  deploy_server.py  endpoint.json
frontend/src/: App.tsx  index.css
frontend/src/apis/: predictImage.ts
frontend/src/components/: PredictionResult.tsx
ml/: .gitignore
ml/data_scripts/: create_test_image.py  generate_plots.py  rebuild_serving_model.py  train_model.py
ml/preprocessing/: augmentation.py  balance_dataset.py  check_balances.py  count_images_per_class.py  data_loader.py  download_mapping.py  filter_healthy.py  split_dataset.py
ml/serving/: generate_plots.py
ml/training/: modelSummary.py  model_builder.py  train_model.py  trainingHistory.py
ml/utils/: data_investigation.py
ml/validation/: class_counts.csv
server/: main.py
